chore: release 0.1.0
- remove unused files
- remove (some) unused functions
- reorganize project structure